# watts_up

./: .gitignore  README.md  app.py  dashboard_by_state.py  pyproject.toml
data/final_data/: Untitled.ipynb  schema.py
data_processing/: get_data.py
data_processing/clean_data/: clean_data.py  clean_elec.py  gdp_cleaning.py
data_processing/extract_data/: elec_prices_api.py  import_data.py  import_egrid.py
data_processing/load_data/: make_db.py  schema.py
data_scraping/: create_db_elec.py  data_elec.json  elec_prices_api.py  gdp_cleaning.py  test_code.py
data_sources/: Untitled.ipynb  Untitled1.ipynb  Untitled2.ipynb  clean_raw_egrid_data.py  cleaned_api_responses.json  import_egrid.py  make_db.py  place_holder_predictions.csv  place_holder_predictions_by_country.csv  placeholder.txt  pop_numbers.json  prediction.ipynb
data_sources/.ipynb_checkpoints/: Untitled-checkpoint.ipynb  prediction-checkpoint.ipynb
data_sources/gdp_pop_raw_data/: gdp_numbers.json
data_viz/: analysis.py  egrid_dummy_data.csv  energy_intensity.py  frank_test  frank_test.py  map_test.py  plant_retirements.py  renewable_predict.py  testing.py
pages/: analysis.py  dashboard.py  placeholder1.py  placeholder2.py  predict.py  prediction.py
util/: util.py  util_placeholder.py
watts_up/: __main__.py  app.py  run.py
watts_up/data_processing/: get_data.py
watts_up/data_sources/: place_holder_predictions.csv  reference_to_xiaoyue.csv
watts_up/data_viz/: charts.py  data_manager.py  helper.py  place_holder_predictions.csv  prediction.py  price_renew_scatter.py  regression_predict.py  (+5 more)
(+18 files in other folders)
