[tool.poetry]
name = "watts-up"
version = "0.1.0"
description = ""
authors = ["Frank Vasquez <frankvasquez7@uchicago.edu>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.12"
dash = "^2.15.0"
pandas = "^2.2.0"
plotly = "^5.19.0"
xlrd = "^2.0.1"
regex = "^2023.12.25"
openpyxl = "^3.1.2"
seaborn = "^0.13.2"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
